src/components/Header/Header.scss
header {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: 1fr;
  grid-column-gap: 2rem;
  padding: 1rem;
  padding-top: 2rem;
  min-width: 320px;
  @media screen and (max-width: 640px) {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    grid-template-rows: repeat(2, 60px);
    grid-column-gap: 0.5rem;
    grid-row-gap: 0.5rem;
  }

  .logo-container {
    grid-area: 1 / 1 / 2 / 2;
    display: flex;
    align-content: center;
    justify-content: center;
    @media screen and (max-width: 640px) {
      grid-area: 1 / 1 / 2 / 3;
    }
    .logo-link {
      display: flex;
      align-items: center;
      color: white;
      font-size: 2rem;

      span {
        padding-left: 1rem;
      }
    }
  }
  .main-nav {
    grid-area: 1 / 2 / 2 / 5;
    @media screen and (max-width: 640px) {
      grid-area: 2 / 1 / 3 / 6;
    }
    ul {
      display: flex;
      justify-content: space-around;
      padding-inline-start: 0;
    }
    .nav-link {
      position: relative;
      font-size: 2rem;
      line-height: 32px;
      color: rgba(255, 255, 255, 0.75);
      transition: 0.4s ease;
      &::after {
        content: '';
        position: absolute;
        width: 100%;
        transform: scaleX(0);
        height: 0.2rem;
        bottom: -0.2rem;
        left: 0;
        background-color: #fff;
        transform-origin: bottom right;
        transition: transform 0.25s ease-out;
      }
      &:hover {
        color: #fff;
        opacity: 1;
        cursor: pointer;
      }
      &:hover::after {
        transform: scaleX(1);
        transform-origin: bottom left;
      }
    }
  }
  .social-container {
    grid-area: 1 / 5 / 2 / 6;
    display: flex;
    justify-content: space-around;
    align-items: center;
    @media screen and (max-width: 640px) {
      align-items: center;
      grid-area: 1 / 4 / 2 / 6;
    }
    .social-icons {
      color: white;
      border-radius: 50%;
      padding: 8px;
      &:hover {
        background-color: #212d45;
        transform: scale(1.2);
        cursor: pointer;
      }
    }
  }
}

